--- a/www/css/index.css
+++ b/www/css/index.css
@@ -45,10 +45,10 @@ body {
     padding:0px;
     text-transform:uppercase;
     width:100%;
-    margin-top: 80px;
+    margin-top: 50px;
 }
-.topContainer{
-    margin-top:20px;
+.contentBody{
+    
 }
 
 .mainTimer{
