--- a/www/css/clock.css
+++ b/www/css/clock.css
@@ -1,5 +1,17 @@
 /* code: css clocks */
-#cssclock { height: 270px; }
+.clockMain{
+	margin-top: 20px;
+}
+#cssclock { height: 270px;
+  width: 250px;
+  margin: auto; }
+  .timeMain{
+  	font-size: 1.5em;
+  	line-height: 2em;
+  	text-align: center;
+  	margin-top:20px;
+  }
+  .sahoorTime, .iftarTime{margin:20px; text-align: center; line-height: 2em; font-size:1.3em;}
 #clockanalog { background: #012345 url("../img/analog.gif") no-repeat 0 0; float: left; height: 250px; margin: 0; overflow: hidden; position: relative; width: 250px; }
 #clockanalog img { border: 0; left: 0px; position: absolute; top: 0px; }
 #clockdigital { background: #012345 url("../img/digital.gif") no-repeat 162px 99px; float: right; height: 250px; margin: 0; overflow: hidden; padding: 0; position: relative; width: 485px; }
