--- a/www/css/index.css
+++ b/www/css/index.css
@@ -150,6 +150,49 @@ h1 {
     margin: 15px 0 5px 10px;
     border-bottom: 2px solid;
 }
+
+
+/****************************************************************************************************************************************************/
+/******************************************** Custom Override ***************************************************************************************/
+
+body, tr, form {font-family: tahoma; font-size: 12px; color: #404040; text-align: center;}
+        pre {font-family: courier, serif, size: 10pt; margin: 0px 8px;}
+        input,select {font-size: 10px;}
+        .header {background:#eef; border-bottom: 1px solid #ddd; padding: 7px;}
+        .caption {font-size: 20px; color: #d95722; text-align: center; width: 10em;}
+        .arrow {font-weight: bold; text-decoration: none; color: #3D3D3D; }
+        .arrow:hover {text-decoration: underline;}
+        .command {font-weight: bold; text-decoration: none; color: #AAAAAA; }
+        .command:hover {text-decoration: underline;}
+        .timetable {border-width: 1px; border-style: outset; border-collapse: collapse; border-color: gray; margin: 0 auto;}
+        .timetable td {border-width: 1px; border-spacing: 1px; padding: 1px; border-style: inset; border-color: #CCCCCC;}
+        .head-row {color: black; background-color: #eef;}
+        .today-row {background-color: #F8F7F4; color: black}
+        .subMenu {list-style: none;}
+        input, select { width: 100%;}
+        input[type=radio]{width:auto;}
+        .formOptions, .formOptions div {text-align: left;}
+        .formRow {margin-bottom: 5px;}
+
+        .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9 {
+  position: relative;
+  min-height: 1px;
+  padding-right: 5px;
+  padding-left: 5px;
+}
+
+.formLabel{
+    height: 30px;
+    padding-top:7px;
+}
+
+#zip{
+    width:80%;
+}
+
+
+
+
 /*.container {
     display: -webkit-flex;
     display: flex;
