--- a/www/css/index.css
+++ b/www/css/index.css
@@ -196,6 +196,10 @@ body, tr, form {font-family: tahoma; font-size: 12px; color: #012345; text-align
     border-radius: 5px;
 }
 
+.navbar-brand {
+    font-size: 13px;
+}
+
 
 
 /*.container {
