--- a/www/css/clock.css
+++ b/www/css/clock.css
@@ -12,9 +12,9 @@
   	margin-top:20px;
   }
   .sahoorTime, .iftarTime{margin:20px; text-align: center; line-height: 2em; font-size:1.3em; width:auto; min-width:80px;}
-#clockanalog { background: #012345 url("../img/analog.gif") no-repeat 0 0; float: left; height: 150px; margin: 0; overflow: hidden; position: relative; width: 150px; }
+#clockanalog { background: transparent url("../img/analog.gif") no-repeat 0 0; float: left; height: 150px; margin: 0; overflow: hidden; position: relative; width: 150px; }
 #clockanalog img { border: 0; left: 0px; position: absolute; top: 0px; }
-#clockdigital { background: #012345 url("../img/digital.gif") no-repeat 162px 99px; float: right; height: 150px; margin: 0; overflow: hidden; padding: 0; position: relative; width: 485px; }
-#clockdigital div { background: #012345; height: 88px; position: absolute; width: 485px; }
+#clockdigital { background: transparent url("../img/digital.gif") no-repeat 162px 99px; float: right; height: 150px; margin: 0; overflow: hidden; padding: 0; position: relative; width: 485px; }
+#clockdigital div { background: transparent; height: 88px; position: absolute; width: 485px; }
 #clockdigital div:last-child { bottom: 0; }
 #clockdigital img { border: 0; display: block; height: 2000px; left: -1553px; margin: 0; padding: 0; position: absolute; top: -867px; width: 2000px; }
