--- a/www/css/bootstrap-theme-ios8.css
+++ b/www/css/bootstrap-theme-ios8.css
@@ -196,7 +196,7 @@ input.search.s3:focus {
   margin: 0;
   border-top: 1px solid #cecdd1;
   border-bottom: 1px none #cecdd1;
-  background-color: white;
+  background-color: transparent;
 }
 .rowtitle {
   margin-top: 0px;
