--- a/www/css/index.css
+++ b/www/css/index.css
@@ -155,19 +155,20 @@ h1 {
 /****************************************************************************************************************************************************/
 /******************************************** Custom Override ***************************************************************************************/
 
-body, tr, form {font-family: tahoma; font-size: 12px; color: #fff; background-color: #012345; text-align: center; background: url('../img/bg-tile.jpg')}
+body, tr, form {font-family: tahoma; font-size: 12px; color: #fff; background-color: #241707; text-align: center; background: url('../img/bg-tile.jpg')}
         pre {font-family: courier, serif, size: 10pt; margin: 0px 8px;}
         input,select {font-size: 10px;}
-        .header {background:#eef; border-bottom: 1px solid #ddd; padding: 7px;}
+        /*.header {background:#eef; border-bottom: 1px solid #ddd; padding: 7px;}*/
+        .header { padding: 7px;}
         .caption {font-size: 20px; color: #d95722; text-align: center; width: 10em;}
         .arrow {font-weight: bold; text-decoration: none; color: #3D3D3D; }
         .arrow:hover {text-decoration: underline;}
         .command {font-weight: bold; text-decoration: none; color: #AAAAAA; }
         .command:hover {text-decoration: underline;}
-        .timetable {border-width: 1px; border-style: outset; border-collapse: collapse; border-color: gray; margin: 0 auto;}
+        .timetable {border-width: 1px; border-style: outset; border-collapse: collapse; border-color: white; margin: 0 auto;}
         .timetable td {border-width: 1px; border-spacing: 1px; padding: 1px; border-style: inset; border-color: #CCCCCC;}
-        .head-row {color: black; background-color: #eef;}
-        .today-row {background-color: #F8F7F4; color: black}
+        .head-row {color: white; background-color: transparent;}
+        .today-row {background-color: #F8F7F4; color: white}
         .subMenu {list-style: none;}
         input, select { width: 100%;}
         input[type=radio]{width:auto;}
@@ -181,14 +182,23 @@ body, tr, form {font-family: tahoma; font-size: 12px; color: #fff; background-co
   padding-left: 5px;
 }
 
+.banner{
+    width:100%;
+    height: 100%;
+    background-color: #241707; 
+    text-align: center; 
+    background: url('../img/bg-tile.jpg')
+    z-index: 1090;
+    position: absolute;
+    text-align: center;
+    vertical-align: middle;
+}
+
 .formLabel{
     height: 30px;
     padding-top:7px;
 }
 
-#zip{
-    width:80%;
-}
 
 .stime, .itime{
     background-color:#000;
@@ -200,10 +210,25 @@ body, tr, form {font-family: tahoma; font-size: 12px; color: #fff; background-co
     font-size: 13px;
 }
 
+
 a {
   color: #FFFFFF;
   text-decoration: none;
 }
+
+.navbar a, .input-group-addon a {
+     color: #241707 ;
+    text-decoration: none;
+}
+
+div.contentBody div{
+    text-align: left;
+}
+
+.input-group-addon {
+  padding: 3px 5px;
+  }
+
 
 /*.container {
     display: -webkit-flex;
